test/typechecker.d/valid/scope.surc
main(stdout: OutputStream) = do
	var two <- 2
	if (true)
		two <- 3
	write stdout , $two
