test/typechecker.d/invalid/scope.surc
main(stdout: OutputStream) = do
	if (true)
		three = 3
	write stdout , $three
